k8s/django-app/app.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    flux.weave.works/automated: "true"
  name: webapp
  # namespace: django-multi-tier
spec:
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
        - name: webapp
          image: thirupathip/django-test
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 8000
            name: http
          resources:
            limits:
              cpu: 200m
              memory: 300Mi
            requests:
              cpu: 200m
              memory: 300Mi
