k8s/django-app/app.service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: webapp
  # namespace: django-multi-tier
  labels:
    app: webapp
spec:
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
  selector:
    app: webapp
